<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="reviewModel"
            type="movies.movieDetails.ReviewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="40dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:fontFamily="@string/font_regular"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/reviewed_by"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@{reviewModel.author}"
            android:fontFamily="@string/font_regular"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:fontFamily="@string/font_condensed"
            android:text="@{reviewModel.content}"
            android:textColor="@color/grey"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
    </LinearLayout>
</layout>